Up-to-date the site repo.

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@ title: Pierre Mollo
 
 		<!-- UpperRight --!>
 		<td class=TabInfo> 
-			<p> 
-			</p>
+			<center> 
+			<img src=assets/images/photo.jpg height="230">
+			</center>
 		</td>
 
 	</tr><!-- END OF FIRST LIGN !-->
@@ -45,77 +46,53 @@ title: Pierre Mollo
 	<tr>
 		<!-- UpperLeft --!>
 		<td valign="top" align="LEFT" style="width:40%">
-			<h2>Sujets de recherche</h2>
+			<h2>About me</h2>
 
-			<p>Actuellement en thèse sous la direction de 
+			<p>I am currently a PhD. student under the supervision of  
 			<a href="http://salmon.perso.math.cnrs.fr/">
-			Stéphanie Salmon</a> au sein de l'équipe <a href="https:
+			Stéphanie Salmon</a> within the team <a href="https:
 			//www.univ-reims.fr/rubrique-cachee/laboratoires-labelises/
 			equations-aux-derivees-partielles-et-physique-mathematique-
 			c.n.r.s.-fre-3111/equipes-de-recherche/modelisation,
 			10069,18106.html?">
-			Modélisation Stocastique et Numérique</a>.
-			Ma thèse est financée par le projet <a href="https://salmon.
-			perso.math.cnrs.fr/hanuman.html">ANR Hanuman</a> 18-CE45-00
-			14-01. Nous travaillons principalement sur les écoulements 
-			de fluides en milieu biologique.
+			Modélisation Stochastique et Numérique</a>.
 			</p>
+			<p>
+				My thesis concerns numerical models of fluid flows in biological media and more 
+				specifically in the cerebral compartiment. 
+				It is funded by the <a href="https://salmon.perso.math.cnrs.fr/hanuman.html">ANR project HANUMAN</a> 
+				18-CE45-0014-01.
+				In my work, I try to use real data acquired at the Amiens CHU to improve numerical 
+				simulations. This combines reduced order modelling, numerical analysis and data assimilation.
+			</p>
+
 		</td>
 
-		<td>
+		<td class=ImgBox>
+		<video height="220" autoplay preload loop controls>
+		<source src="assets/video/step.mp4" type="video/mp4">
+		</video>
+		<img src="assets/images/simu.png" height=220>
 		</td>
 
 	</tr><!-- END OF FIRST LIGN !-->
 	</tbody>
 </table>
 
-<table width="100%">
-	<tbody>
-	<tr>
-		<!-- UpperLeft --!>
-		<td valign="top" align="LEFT">
-			<h2>Communications</h2>
-			<p>
-			<ul class=CommList>
-			<li> <b>FreeFem++ days 2019</b>, présentation "<i>Reduced
-			basis with FreeFem++, application to Stokes equations</i>" (
-			<a href="https://freefem.org/">FreeFem++</a>,
-			<a href="https://github.com/FreeFem/FreeFem-days/blob/
-			master/2019/slides/talk-PM.pdf">présentation</a>
-			)
-			</li>
-			<li><b>VPH 2020</b>, poster "<i>A reduced basis method for 
-			computing cerebrospinal fluid hydrodynamics</i>", 
-			[student poster award] (
-			<a href="https://vph2020.sciencesconf.org/">VPH2020</a>
-			<!-- Presentation ? --!>
-		   )
-		   </li>
-		   </ul>
-		   <p>
-		</td>
+<h2>Research interest</h2>
+<ul>
+<li>Numerical analysis</li>
+<li>Finite element method</li>
+<li>Model order reduction</li>
+<li>Data assimilation</li>
+</ul>
 
-		<td>
-		</td>
+<h2>Other</h2>
+<p>
+I am the organiser of seminars for PhD. student at the maths lab. 
+of Reims (<a href=https://umr9008.pages.math.cnrs.fr/public/seminaire-jeune-chercheur/sjcr/main/index.html>Séminaires Jeunes-Chercheurs</a>).
+</p>
+<p>
+I also represent PhD. students at the laboratory board.
+</p>
 
-	</tr>
-	</tbody>
-</table>
-
-<table width="100%">
-	<tbody>
-	<tr>
-		<!-- UpperLeft --!>
-		<td valign="top" align="LEFT">
-			<h2>Production scientifique</h2>
-			<p>Document de recherche sur les bases réduites appliquées 
-			aux équations de diffusion : à venir
-			</p>
-		</td>
-
-		<td>
-		</td>
-
-	</tr>
-	</tbody>
-</table>
