TUe moving update

--- a/index.html
+++ b/index.html
@@ -12,13 +12,11 @@ title: Pierre Mollo
 				<b><font size="+3">Pierre Mollo </font></b>
 				<br>
 				<br>
-				<a href="https://www.univ-reims.fr/accueil/bienvenue-
-				sur-le-site-du-laboratoire-de-mathematiques,
-				10063,18100.html">
-				Laboratoire de Mathematiques de Reims</a>
-				<br>Université de Reims Champagne-Ardenne
-				<br>Moulin de la Housse - BP 1039
-				<br>51687 Reims cedex 2
+				<a href="https://casa.win.tue.nl/home/">
+				Centre for Analysis, Scientific Computing and Applications</a>
+				<br>TU Eindhoven
+				<!-- <br> 
+				<br>51687 Reims cedex 2 !-->
 		</td>
 		
 		<!-- UpperMiddle --!>
@@ -48,9 +46,20 @@ title: Pierre Mollo
 		<td valign="top" align="LEFT" style="width:40%">
 			<h2>About me</h2>
 
-			<p>I am currently a PhD. student under the supervision of  
+			<p>I am currently a PostDoc researcher working with 
+			<a href="https://www.tue.nl/en/research/researchers/karen-veroy-grepl/">
+			Karen Veroy-Grepl</a>
+			within the 
+			<a href="https://casa.win.tue.nl/computational-science/">
+			Computational Science</a> team.
+			</p>
+			<p>In my PostDoc I aim to integrate Model Order Reduction technics
+				in a Data Assimilation context (filters, smoother).
+			</p>
+
+			<p>During 2019-2022 I was PhD. student under the supervision of  
 			<a href="http://salmon.perso.math.cnrs.fr/">
-			Stéphanie Salmon</a> within the team <a href="https:
+			Stéphanie Salmon</a> in the team <a href="https:
 			//www.univ-reims.fr/rubrique-cachee/laboratoires-labelises/
 			equations-aux-derivees-partielles-et-physique-mathematique-
 			c.n.r.s.-fre-3111/equipes-de-recherche/modelisation,
@@ -58,12 +67,12 @@ title: Pierre Mollo
 			Modélisation Stochastique et Numérique</a>.
 			</p>
 			<p>
-				My thesis concerns numerical models of fluid flows in biological media and more 
-				specifically in the cerebral compartiment. 
-				It is funded by the <a href="https://salmon.perso.math.cnrs.fr/hanuman.html">ANR project HANUMAN</a> 
+				<a href="https://theses.fr/2023REIMS004">My thesis</a> 
+				concerns numerical models of fluid flow in the cerebral compartment. 
+				It was funded by the <a href="https://salmon.perso.math.cnrs.fr/hanuman.html">ANR project HANUMAN</a> 
 				18-CE45-0014-01.
-				In my work, I try to use real data acquired at the Amiens CHU to improve numerical 
-				simulations. This combines reduced order modelling, numerical analysis and data assimilation.
+				In this work, I tried to use real data acquired at the Amiens Hospital to improve numerical 
+				simulations. 
 			</p>
 
 		</td>
@@ -86,7 +95,7 @@ title: Pierre Mollo
 <li>Model order reduction</li>
 <li>Data assimilation</li>
 </ul>
-
+<!--
 <h2>Other</h2>
 <p>
 I am the organiser of seminars for PhD. student at the maths lab. 
@@ -95,4 +104,5 @@ of Reims (<a href=https://umr9008.pages.math.cnrs.fr/public/seminaire-jeune-cher
 <p>
 I also represent PhD. students at the laboratory board.
 </p>
+--!>
 
